Correction du overflow et du bug sur l'affichage de la dernière slide + clean + commentaires

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,18 +27,14 @@ main > h2 {
   justify-content: space-around;
 }
 @import url('https://fonts.googleapis.com/css?family=Lato:300,400|Poppins:300,400,800&display=swap');
+
 /* ---------- Title animation ------------ */
 
 * {
   margin: 0;
   padding: 0;
 }
-/* body, html {
-   overflow: hidden;
-} */
 .container {
-  /* width: 100%; */
-  /* height: 100vh; */
   background: #232323;
 
   display: flex;
@@ -126,7 +122,6 @@ h1 > span {
     text-transform: uppercase;
     letter-spacing: 5px;
 }
-
 @keyframes mainBlock {
   0% {
     width: 0%;
@@ -143,7 +138,6 @@ h1 > span {
     left: 100%;
   }
 }
-
 @keyframes secBlock {
   0% {
     width: 0%;
@@ -160,7 +154,6 @@ h1 > span {
     left: 100%;
   }
 }
-
 @keyframes mainFadeIn {
   0% {
     opacity: 0;
@@ -169,7 +162,6 @@ h1 > span {
     opacity: 1;
   }
 }
-
 @keyframes popIn {
   0% {
     width: 0px;
@@ -205,7 +197,6 @@ h1 > span {
 
   }
 }
-
 @keyframes secFadeIn {
   0% {
     opacity: 0;
@@ -215,34 +206,8 @@ h1 > span {
   }
 }
 
-/* @keyframes top {
-  0% {
-    opacity: 0;
-     bottom: -80px
-  }
-  100% {
-    opacity: 1;
-     bottom: 0px
-
-  }
-}
-
-@keyframes icon {
-  0% {
-    opacity: 0;
-     transform: scale(0.0);
-  }
-   50% {
-      opacity: 1;
-     transform: scale(1.3) rotate(-02deg);
-   }
-  100% {
-    opacity: 1;
-     bottom: 0px;
-  }
-} */
-
 /* ---------- Présentation ------------ */
+
 .presentation {
   border-top: 2px solid #e91e63;
   background-color:#ffb510;
@@ -250,7 +215,6 @@ h1 > span {
   flex-direction: column;
   align-items: center;
 }
-
 .presentation > h2 {
   font-family: 'Poppins';
   background-color: #ffb510;
@@ -269,7 +233,6 @@ h1 > span {
   padding-left: 0;
   margin-bottom: 2rem;
 }
-
 .presentation_button {
   display: flex;
   margin: 10px;
@@ -284,11 +247,9 @@ h1 > span {
   border: 2px solid #232323;
   transition-property: border;
 }
-
 .presentation_button:hover {
   border: none;
 }
-
 .presentation > ul > a {
   text-decoration: none;
   color: white;
@@ -303,13 +264,13 @@ h1 > span {
 }
 
 /* ------------ Competences -----------*/  
+
 #competences {
   border-top: 2px solid #e91e63;
   display: flex;
   flex-direction: column;
   align-items: center;  
 }
-
 #competences > h2 {
   font-family: 'Poppins';
   background-color: white;
@@ -323,7 +284,6 @@ h1 > span {
   border: none;
   font-size: 20px;
 }
-
 table {
   table-layout: fixed;
   font-family: 'Lato';
@@ -335,18 +295,15 @@ table {
   font-weight: bold;
   margin-bottom: 4rem;
 }
-
 th {
   width : 140px;
 }
-
 .max_bar {
   background-color : lightgray;
   height: 25px;
   width : 100%;
   border-radius: 10px;
 }
-
 .progress_bar {
   height : 25px;
   border-radius: 10px;
@@ -354,7 +311,6 @@ th {
   color: white;
   font-size: 16px;
 }
-
 .html > th {
   color: #8e44ad;
 }
@@ -415,7 +371,6 @@ th {
   flex-direction: column;
   align-items: center;  
 }
-
 .soft_skills > h2 {
   font-family: 'Poppins';
   background-color: #232323;
@@ -441,11 +396,9 @@ th {
   font-size: 20px;
   height : 130px;
 }
-
 .text {
   width: 300px;
 }
-
 .text p {
   display: flex;
   justify-content: center;
@@ -453,17 +406,14 @@ th {
   margin-top: -15px;
   color: white;
 }
-
 .text p span {
   text-align: center;
 }
-
 .word {
   position: absolute;
   width: 280px;
   opacity: 0;
 }
-
 .letter {
   display: inline-block;
   position: relative;
@@ -471,41 +421,32 @@ th {
   transform: translateZ(25px);
   transform-origin: 50% 50% 25px;
 }
-
 .letter.out {
   transform: rotateX(90deg);
   transition: transform 0.32s cubic-bezier(0.55, 0.055, 0.675, 0.19);
 }
-
 .letter.behind {
   transform: rotateX(-90deg);
 }
-
 .letter.in {
   transform: rotateX(0deg);
   transition: transform 0.38s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
-
 .wisteria {
   color: #8e44ad;
 }
-
 .belize {
   color: #2980b9;
 }
-
 .pomegranate {
   color: #c0392b;
 }
-
 .green {
   color: #16a085;
 }
-
 .yellow {
   color: #ffb510;
 }
-
 .rose {
   color: #e91e63;
 }
@@ -517,11 +458,9 @@ th {
   width: 100%;
   height: auto;
 }
-
 .row {
   margin:0 20px 50px;
 }
-
 #projets {
   border-top: 2px solid #e91e63;
   display: flex;
@@ -529,7 +468,6 @@ th {
   align-items: center;
   padding: 0px 30px 30px 30px;
 }
-
 #projets > h2 {
   font-family: 'Poppins';
   background-color: white;
@@ -568,6 +506,7 @@ th {
 }
 .carousel {
   position: relative;
+  overflow: hidden;
 }
 .carousel_panorama {
   transition: transform 0.3s;
@@ -591,7 +530,7 @@ th {
   border-radius: 50%;
   top: 50%;
   margin-top: -20px;
-  right: -10px;
+  right: 10px;
   box-shadow: 0 15px 35px #3232321a, 0 5px 15px #0000001a;
   cursor: pointer;
   transition: transform 0.3s, opacity 0.3s;
@@ -602,35 +541,12 @@ th {
 .carousel_prev {
   background-image: url(../images/arrow-left.png);
   right: auto;
-  left : -10px;
+  left: 10px;
 }
 .carousel_next-hidden, .carousel_prev-hidden {
   opacity: 0;
 }
-/*
-.project_text {
-  display: none;
-  text-align: center;
-  width: 100%;
-   border-radius: 3%;
-  box-shadow: 10px 5px 5px rgb(21, 24, 24);
-}
- .col > a .project_text h3 {
-  font-weight: bold;
-  color: #e91e63;
-  margin-bottom: 50px;
-}
-.col > a .project_text p {
-  font-style: italic;
-}
-.col > a:hover img {
-  display: none;
-}
-.col > a:hover .project_text {
-  display: flex;
-  flex-direction: column;
-}
- */ 
+
 /* -------- Contacts ---------- */
 
 #contacts {
@@ -640,7 +556,6 @@ th {
   flex-direction: column;
   align-items: center;
 }
-
 #contacts > h2 {
   font-family: 'Poppins';
   background-color: #ffb510;
@@ -669,7 +584,6 @@ th {
   color:#ffb510; 
   margin: 10px;
 }
-
 .contact > ul > a:hover {
   background-color: #e91e63;
 }
@@ -684,20 +598,17 @@ th {
 }
 
 /* -------- Footer ---------- */
+
 footer {
   background-color: #232323;
   display: flex;
   flex-direction: row;
   justify-content: center;
 }
-
 footer p {
   color: grey;
   margin-bottom: 0;
 }
-
-
-
 @media screen and (min-width: 350px) 
 {
   .soft_skills > h2, #competences > h2, .presentation > h2, #projets > h2, #contacts > h2 {
@@ -716,7 +627,6 @@ footer p {
     width : 50%;
   }
 }
-
 @media screen and (min-width: 500px) 
 {
   .soft_skills {
